    Only the C locale is supported, though.  HAVE_STRFTIME_L defaults
    to 1 on recent POSIX versions, and to 0 otherwise.

    zdump now builds with the tz library unless USE_LTZ is defined to 0,
    This lets zdump use tz features even if the system library lacks them.
    To build zdump with the system library, use 'make CFLAGS=-DUSE_LTZ=0
    TZDOBJS=zdump.o CHECK_TIME_T_ALTERNATIVES='.

    tzselect -c now uses a hybrid distance measure that works better
    in Africa.  (Thanks to Alan Barrett for noting the problem.)

    The C source code now ports to NetBSD when GCC_DEBUG_FLAGS is used,
    or when time_tz is defined.

    When HAVE_UTMPX_H is set the 'date' command now builds on systems
    whose <utmpx.h> file does not define WTMPX_FILE, and when setting
    the date it updates the wtmpx file if _PATH_WTMPX is defined.
    This affects GNU/Linux and similar systems.

    For easier maintenance later, some C code has been simplified
    and some lint has been removed.

    The long-obsolete LOCALE_HOME code has been removed.

    The long-obsolete 'gtime' function has been removed.

  Changes affecting build procedure

    'zdump' no longer links in ialloc.o, as it's not needed.

  Changes affecting distribution tarballs

    The files checktab.awk and zoneinfo2tdf.pl are now distributed in
    the tzdata tarball instead of the tzcode tarball, since they help
    maintain the data.  The NEWS and Theory files are now also
    distributed in the tzdata tarball, as they're relevant for data.
    (Thanks to Alan Barrett for pointing this out.)  Also, the
    leapseconds.awk file is no longer distributed in the tzcode
    tarball, since it belongs in the tzdata tarball (where 2014f
    inadvertently also distributed it).

  Changes affecting documentation and commentary

    A new file CONTRIBUTING is distributed.  (Thanks to Tim Parenti for
    suggesting a CONTRIBUTING file, and to Walter Harms for debugging it.)
