@@ -85,6 +85,10 @@ Unreleased, experimental changes
     To build zdump with the system library, use 'make CFLAGS=-DUSE_LTZ=0
     TZDOBJS=zdump.o CHECK_TIME_T_ALTERNATIVES='.
 
+    zdump now uses localtime_rz if available, as it's significantly faster.
+    Define HAVE_LOCALTIME_RZ to 0 to suppress this.  HAVE_LOCALTIME_TZ
+    defaults to 1 if NETBSD_INSPIRED && USE_LTZ.
+
     tzselect -c now uses a hybrid distance measure that works better
     in Africa.  (Thanks to Alan Barrett for noting the problem.)
 
